--- a/.classpath
+++ b/.classpath
@@ -8,9 +8,9 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="C:/Users/USUARIO/Downloads/Nueva carpeta (4)/Jar/byte-buddy-1.14.12.jar"/>
-	<classpathentry kind="lib" path="C:/Users/USUARIO/Downloads/Nueva carpeta (4)/Jar/byte-buddy-agent-1.14.12.jar"/>
-	<classpathentry kind="lib" path="C:/Users/USUARIO/Downloads/Nueva carpeta (4)/Jar/mockito-core-5.11.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/USUARIO/Downloads/Nueva carpeta (4)/Jar/objenesis-3.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Fran/Documents/Mega Sync/UNQ/Objetos II/mockito/Nueva version/byte-buddy-1.14.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Fran/Documents/Mega Sync/UNQ/Objetos II/mockito/Nueva version/byte-buddy-agent-1.14.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Fran/Documents/Mega Sync/UNQ/Objetos II/mockito/Nueva version/mockito-core-5.11.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Fran/Documents/Mega Sync/UNQ/Objetos II/mockito/Nueva version/objenesis-3.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
